--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <script src="popup.js"></script>
-    <style>
-    </style>
+    <style></style>
   </head>
   <body>
     <div id="title"><h1>와플노트</h1></div>
@@ -15,11 +13,13 @@
       <h2>
       박운상님 환영합니다!<br><br>
       남은 크래딧 : 1320분<br>
+      <video id="video" autoplay></video>
       </h2>
-      <br><br>
-      <button id="start">강의 시작</button>
+      <button id="start_end">강의 시작</button>
       <br><br>
       <button id="visit">홈페이지 방문</button>
+      <br><br>
     </div>
+    <script src="popup.js" type="text/javascript"></script>
   </body>
 </html>
