Style: Add icon

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       name="description"
       content="Web site"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="icon" href="%PUBLIC_URL%/WaffleLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
   </head>
