New feature: Sign up

--- a/sign-in.html
+++ b/sign-in.html
@@ -15,7 +15,7 @@
       <img src="./images/sign-in1.png" class="img1"></img>
       <img src="./images/sign-in2.png" class="img2"></img>
       <div class='google_btn'>
-        <div class="g-signin2" data-onsuccess="onSignIn" data-longtitle="true" style="width:300px; height:40px; position: relative;"></div>
+        <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-longtitle="true" style="width:300px; height:40px; position: relative;"></div>
       </div>
       <div class="info">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;아직 구글 계정이 없으세요?<br/><br/>
