--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,3 +1,7 @@
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
 <div>
   <b><와플노트>('wafflenote.com'이하 '와플노트')은(는) 개인정보보호법에 따라
   이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을
@@ -201,3 +205,4 @@
   개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제
   절차를 수립, 운영하고 있습니다.<br />
 </div>
+</html>
