--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,3 +1,7 @@
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
 <div><b>
   제1조 (목 적) <br />
   이 약관은 (주)와플노트가 운영하는 http://www.wafflenote.com(이하 "와플노트"라
@@ -345,3 +349,4 @@
   [ 부 칙 ] <br />1. 시행일: 이 약관은 2020년 10월 29일부터 시행합니다.(ver
   1.0)<br />
 </div>
+</html>
