--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="icon" href="%PUBLIC_URL%/WaffleLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>와플노트</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
