Feat: write review (without design)

--- a/service.html
+++ b/service.html
@@ -11,6 +11,10 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    준비중입니다.
+    <input type="text" id="review">
+    <button onclick="postReview()">POST</button>
+    <pre id="review-list"></pre>
   </body>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src=service.js></script>
 </html>
