Feat: review page design

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			</ul>
 			-->
       <p class="copyright">
-        &copy; Untitled. Credits: 와플노트<br>
+        2020 &copy; 와플노트. All rights reserved.<br>
   
       </p>
 		</footer>
