Fix: delete unnecessary

--- a/service.html
+++ b/service.html
@@ -13,8 +13,8 @@
     <nav>
       <ul class="nav-container">
         <li class="waffle-logo"><img src="images/logo.png" width="300px" height="50px"></img></li>
-        <li class="nav-item"><a href="">제품</a></li>
-        <li class="nav-item"><a href="#one" class="scrolly">기능</a></li>
+        <li class="nav-item"><a href="/">제품</a></li>
+        <li class="nav-item"><a href="/">기능</a></li>
         <li class="nav-item"><a href="/service.html">고객센터</a></li>
         <li class="nav-item"><a href="/companyinfo.html">회사소개</a></li>
         <li class="space"></li>
@@ -26,7 +26,6 @@
               deleteCookie();
             }
           }
-          // checkLoginStatus();
           ">로그인</a></li>
         <li class="signup-btn"><a href="/sign-up.html" id="signupBtn">회원가입</a></li>
       </ul>
