--- a/service.html
+++ b/service.html
@@ -26,6 +26,7 @@
               deleteCookie();
             }
           }
+          // checkLoginStatus();
           ">로그인</a></li>
         <li class="signup-btn"><a href="/sign-up.html" id="signupBtn">회원가입</a></li>
       </ul>
@@ -49,5 +50,6 @@
   </body>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src=service.js></script>
+  <script src="index.js"></script>
 </html>
 
