--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <li class="waffle-logo"><img src="images/logo.png" width="300px" height="50px"></img></li>
         <li class="nav-item"><a href="">제품</a></li>
         <li class="nav-item"><a href="#one" class="scrolly">기능</a></li>
-				<li class="nav-item"><a href="/service.html">고객센터</a></li>
-				<li class="nav-item"><a href="/companyinfo.html">회사소개</a></li>
+        <li class="nav-item"><a href="/how-to-use.html">이용</a></li>
+        <li class="nav-item"><a href="/service.html">후기</a></li>
 				<li class="space"></li>
         <li class="signup-btn"><a href="/sign-in.html" id="loginBtn" onclick="
           console.log(this.innerHTML);			
